--- a/install-prev/Makefile.ku1.3
+++ b/install-prev/Makefile.ku1.3
@@ -1,4 +1,4 @@
-# based on KU packages template 1.4 (2021-10-25)
+# based on KU packages template 1.3 (2012/10)
 
 # default, preprocess control files
 #
@@ -19,10 +19,4 @@ mrproper: clean clean_controls
 
 clean_controls:
 	for file in `ls debian.in 2>/dev/null`; do rm -f debian/$$file; done
-	[ -f ku/history ] && rm -f debian.in/changelog
-
-# a clean debian package
-debianize:
-	$(MAKE) mrproper
-	$(MAKE) controls
-	jtdeb-clean
+	for file in `ls fedora.in 2>/dev/null`; do rm -f fedora/$$file; done
